--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
 <div style='font-size: large; font-family: GARAM;'>
 TRWCJTIEEPS TWF CACHSMANGJ BLOCKCHAIN
 </div>
+  
+<script src="./script.js"></script>
 
 </body>
 </html>
