--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html xmlns='http://www.w3.org/1999/xhtml'>
 <head>
 
-<link href='https://gitcdn.link/repo/asinerum/project/master/static/css/fonts.css' rel='stylesheet' type='text/css'/>
+<link rel='stylesheet' type='text/css' href='./fonts.css'/>
 
 </head>
 <body>
@@ -11,8 +11,14 @@
 <div style='font-size: large; font-family: GARAM;'>
 TRWCJTIEEPS TWF CACHSMANGJ BLOCKCHAIN
 </div>
-  
-<script src="./script.js"></script>
+
+<div style='font-size: large; font-family: GARAM;'>
+PROJECT WEBSITE HAS BEEN SERVED BY GITHUB PAGE AT
+<br/>
+https://asinerum.github.io/project/
+</div>
+ 
+<script type="text/javascript" src="./script.js"></script>
 
 </body>
 </html>
