--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <html xmlns='http://www.w3.org/1999/xhtml'>
 <head>
 
-<link rel='stylesheet' type='text/css' href='./fonts.css'/>
+<link rel='stylesheet' type='text/css' href='./static/css/fonts.css'/>
 
 </head>
 <body>
 
-<img src="https://raw.githubusercontent.com/asinerum/project/master/images/as/logo_asinerum.jpg"/>
+<img src="./images/as/logo_asinerum.jpg"/>
 
 <div style='font-size: large; font-family: GARAM;'>
 TRWCJTIEEPS TWF CACHSMANGJ BLOCKCHAIN
