--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
 <link href="./favicon.ico" rel="icon" type="image/x-icon"/>
 <link href="./gui/fonts.css" rel="stylesheet" type="text/css"/>
 <link href="./gui/style.css" rel="stylesheet" type="text/css"/>
-<script src="./_jquery.js"></script>
-<script src="./_web3js.js"></script>
-<script src="./_ethereumjs-tx.js"></script>
-<script src="./require.js"></script>
+<script src="./scr/_jquery.js"></script>
+<script src="./scr/_web3js.js"></script>
+<script src="./scr/_ethereumjs-tx.js"></script>
+<script src="./scr/require.js"></script>
 </head>
 <body class="private">
 <div class="body" id="body">
@@ -369,7 +369,7 @@
 <hr class="cp"/>
 <br/>
 <div class="footer" id="_footer_copyright">(C)2019 ASINERUM INTERNATIONAL PROJECT</div>
-<script src="./show.js"></script>
+<script src="./scr/show.js"></script>
 </div>
 </body>
 </html>
