--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
 <link href="./favicon.ico" rel="icon" type="image/x-icon"/>
 <link href="./gui/fonts.css" rel="stylesheet" type="text/css"/>
 <link href="./gui/style.css" rel="stylesheet" type="text/css"/>
-<script src="./scr/_jquery.js"></script>
-<script src="./scr/_web3js.js"></script>
-<script src="./scr/_ethereumjs-tx.js"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+<script src="https://cdn.jsdelivr.net/gh/ethereum/web3.js@1.0.0-beta.34/dist/web3.min.js"></script>
+<script src="https://cdn.jsdelivr.net/gh/ethereumjs/browser-builds/dist/ethereumjs-tx/ethereumjs-tx-1.3.3.min.js"></script>
 <script src="./scr/require.js"></script>
 </head>
 <body class="private">
