--- a/index-author.html
+++ b/index-author.html
@@ -4,14 +4,7 @@
 <meta content="text/html; charset=UTF-8" http-equiv="Content-Type"/>
 <title>XUTENG ASINERUM SHARE</title>
 <link href="./favicon.ico" rel="icon" type="image/x-icon"/>
-<link href="./gui/fonts.css" rel="stylesheet" type="text/css"/>
-<link href="./gui/style.css" rel="stylesheet" type="text/css"/>
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.7.6/angular.min.js"></script>
-<script src="https://cdn.jsdelivr.net/gh/ethereum/web3.js@1.0.0-beta.34/dist/web3.min.js"></script>
-<script src="https://cdn.jsdelivr.net/gh/ethereumjs/browser-builds/dist/ethereumjs-tx/ethereumjs-tx-1.3.3.min.js"></script>
-<script src="https://kit.fontawesome.com/608f5e1b1c.js" crossorigin="anonymous"></script>
-<script src="./scr/xuteng9.js"></script>
+<script src="./scr/xuteng.user.js"></script>
 </head>
 <body class="private">
 <div class="body" id="body">
