--- a/scr/test.html
+++ b/scr/test.html
@@ -1,7 +1,6 @@
 <html>
   <head>
   <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"/>
-  <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"/>
   <link rel="stylesheet" type="text/css" href="https://asinerum.github.io/project/gui/fonts.css"/>
   <link rel="stylesheet" type="text/css" href="https://asinerum.github.io/project/gui/style.css"/>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
@@ -17,6 +16,7 @@
   <script src="./xbutton.js"></script>
   </head>
   <body>
+  <div class="body" id="body">
   WEB APP TEST ON GOOGLE CHROME: PRESS F12 TO OPEN CONSOLE
   <br/>
   <br/>
@@ -30,6 +30,7 @@
   <br/>
   <br/>
   <div id="test">
+  </div>
   </div>
   </body>
 </html>
