--- a/scr/test.html
+++ b/scr/test.html
@@ -1,3 +1,5 @@
+<!DOCTYPE html>
+<meta charset="utf-8">
 <html>
   <head>
   <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"/>
@@ -12,7 +14,7 @@
   <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs@1.3.1/dist/tf.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/@teachablemachine/image@0.8/dist/teachablemachine-image.min.js"></script>
   <script src="https://unpkg.com/keras-js"></script>
-  <script src="https://asinerum.github.io/project/scr/xuteng11.js"></script>
+  <script src="./xuteng11.js"></script>
   <script src="./xbutton.js"></script>
   </head>
   <body>
@@ -20,17 +22,17 @@
   WEB APP TEST ON GOOGLE CHROME: PRESS F12 TO OPEN CONSOLE
   <br/>
   <br/>
-  <pre id="source">
-..........................................................
-..........................................................
-  </pre>
-  <br/>
-  <br/>
   <button onclick="test();">TEST</button>
   <br/>
   <br/>
   <div id="test">
   </div>
+  <div class="test">
+  </div>
+  <br/>
+  <br/>
+  <br/>
+  <br/>
   </div>
   </body>
 </html>
