--- a/index-author-pro.html
+++ b/index-author-pro.html
@@ -1,7 +1,6 @@
-<!doctype html>
-<html lang="en">
+<!DOCTYPE html>
+<meta charset="utf-8">
 <head>
-<meta content="text/html; charset=UTF-8" http-equiv="Content-Type"/>
 <title>XUTENG ASINERUM SHARE</title>
 <link href="./favicon.ico" rel="icon" type="image/x-icon"/>
 <script src="./scr/xuteng.user.js"></script>
