--- a/scr/test.html
+++ b/scr/test.html
@@ -14,7 +14,8 @@
   <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs@1.3.1/dist/tf.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/@teachablemachine/image@0.8/dist/teachablemachine-image.min.js"></script>
   <script src="https://unpkg.com/keras-js"></script>
-  <script src="./xuteng11.js"></script>
+  <script src="./xuteng12.js"></script>
+  <script src="./xutmsg12.js"></script>
   <script src="./xbutton.js"></script>
   </head>
   <body>
@@ -28,6 +29,10 @@
   <div id="test">
   </div>
   <div class="test">
+  </div>
+  <div id="hash">
+  </div>
+  <div class="hash">
   </div>
   <br/>
   <br/>
