--- a/scr/test.html
+++ b/scr/test.html
@@ -14,9 +14,9 @@
   <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs@1.3.1/dist/tf.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/@teachablemachine/image@0.8/dist/teachablemachine-image.min.js"></script>
   <script src="https://unpkg.com/keras-js"></script>
-  <script src="./xuteng12.js"></script>
-  <script src="./xutmsg12.js"></script>
-  <script src="./xbutton.js"></script>
+  <script src="https://asinerum.github.io/project/scr/xuteng12.js"></script>
+  <script src="https://asinerum.github.io/project/scr/xutmsg12.js"></script>
+  <script src="https://asinerum.github.io/project/scr/xbutton.js"></script>
   </head>
   <body>
   <div class="body" id="body">
