Replace test.html

--- a/scr/test.html
+++ b/scr/test.html
@@ -23,6 +23,12 @@
   WEB APP TEST ON GOOGLE CHROME: PRESS F12 TO OPEN CONSOLE
   <br/>
   <br/>
+  <span class="textwarn">DO NOT TEST THIS API IN PUBLIC COMPUTERS</span>
+  <br/>
+  <br/>
+  <span class="textwarn">ALWAYS DO CLEAR CONSOLE HISTORY AFTER WORKING</span>
+  <br/>
+  <br/>
   <button onclick="test();">TEST</button>
   <br/>
   <br/>
