--- a/scr/test.html
+++ b/scr/test.html
@@ -29,6 +29,29 @@
   <span class="textwarn">ALWAYS DO CLEAR CONSOLE HISTORY AFTER WORKING</span>
   <br/>
   <br/>
+  <div class="textdate">
+  CONNECT TO AN ETHEREUM TEST NODE
+  <br/>
+  <i class="fa fa-caret-right"></i> launchRpc(`https://ropsten-rpc.linkpool.io`,`ropsten`);
+  <br/>
+  <br/>
+  CREATE NEW WALLET IF YOU HAVE NONE
+  <br/>
+  <i class="fa fa-caret-right"></i> userCreate(`your_secret_passcode`);
+  <br/>
+  <br/>
+  UNLOCK YOUR KEYSTORE WITH SECRET PASSCODE
+  <br/>
+  <i class="fa fa-caret-right"></i> userUnlock(`your_secret_passcode`, `your_keystore`);
+  <br/>
+  <br/>
+  START YOUR WORKING SESSION
+  <br/>
+  <i class="fa fa-caret-right"></i> getData(`your_ethereum_wallet`, 1);
+  <br/>
+  <br/>
+  </div>
+  <br/>
   <button onclick="test();">TEST</button>
   <br/>
   <br/>
