--- a/scr/test.html
+++ b/scr/test.html
@@ -17,6 +17,7 @@
   <script src="https://asinerum.github.io/project/scr/xuteng12.js"></script>
   <script src="https://asinerum.github.io/project/scr/xutmsg12.js"></script>
   <script src="https://asinerum.github.io/project/scr/xbutton.js"></script>
+  <script src="https://asinerum.github.io/project/scr/xdomain.js"></script>
   </head>
   <body>
   <div class="body" id="body">
