--- a/index-author.html
+++ b/index-author.html
@@ -37,11 +37,9 @@
 <div>
 <table class="cover">
 <tr><td class="buttoner"><a class="button" data-action="AuthAccNew" id="_button_AuthAccNew"></a></td><td><span id="new_address"></span></td></tr>
-<tr><td class="buttoner"><span class="label" id="_label_AuthAccKey"></span></td><td><input type="text" class="long" value="" id="new_private"/><br/>
-   <a class="link" data-action="AuthCpyKey" id="_button_AuthCpyKey"></a>&nbsp;</td></tr>
+<tr><td class="buttoner"><span class="label" id="_label_AuthAccKey"></span></td><td><input type="text" class="long" value="" id="new_private"/><br/><a class="link" data-action="AuthCpyKey" id="_button_AuthCpyKey"></a>&nbsp;</td></tr>
 <tr><td class="buttoner"><a class="button" data-action="AuthAccImp" id="_button_AuthAccImp"></a></td><td><input type="text" class="copy" value="" id="old_private"/></td></tr>
-<tr><td class="buttoner"><a class="button" data-action="AuthAccExp" id="_button_AuthAccExp"></a></td><td><input type="text" class="long" value="" id="exp_private"/><br/>
-   <a class="link" data-action="AuthCpyExp" id="_button_AuthCpyExp"></a>&nbsp;</td></tr>
+<tr><td class="buttoner"><a class="button" data-action="AuthAccExp" id="_button_AuthAccExp"></a></td><td><input type="text" class="long" value="" id="exp_private"/><br/><a class="link" data-action="AuthCpyExp" id="_button_AuthCpyExp"></a>&nbsp;</td></tr>
 </table>
 <div class="result" id="_account_status"></div>
 <div class="result" id="_help_account"></div>
@@ -54,8 +52,7 @@
 <div>
 <table class="cover">
 <tr><td class="buttoner"><span class="label" id="_label_AuthSigMsg"></span></td><td><textarea class="longfat" id="message"></textarea></td></tr>
-<tr><td class="buttoner"><a class="button" data-action="AuthSigSig" id="_button_AuthSigSig"></a></td><td><input type="text" class="long" value="" id="signature"/><br/>
-   <a class="link" data-action="AuthCpySig" id="_button_AuthCpySig"></a>&nbsp;</td></tr>
+<tr><td class="buttoner"><a class="button" data-action="AuthSigSig" id="_button_AuthSigSig"></a></td><td><input type="text" class="long" value="" id="signature"/><br/><a class="link" data-action="AuthCpySig" id="_button_AuthCpySig"></a>&nbsp;</td></tr>
 <tr><td class="buttoner"><span class="label" id="_label_AuthSigUsr"></span></td><td><input type="text" class="long" value="0x00" id="signatory"/></td></tr>
 <tr><td class="buttoner"><a class="button" data-action="AuthSigVer" id="_button_AuthSigVer"></a></td><td><span class="result" id="verify"></span></td></tr>
 </table>
