--- a/index-author.html
+++ b/index-author.html
@@ -157,8 +157,8 @@
 <div>
 <table class="cover">
 <tr><td class="buttoner"><span class="trlab" id="_label_AuthSumXut"></span></td><td><span id="bgxuteng"><xut><span id="_xuteng"></span></xut></span></td></tr>
-<tr><td class="buttoner"><a class="button" data-action="AuthPayXut" id="_button_AuthPayXut"></a></td><td><input type="text" class="long" value="0x00" id="xutTo"/></td></tr>
-<tr><td class="buttoner"></td><td><input type="text" class="money" value="0" id="xut"/>&nbsp;XUT</td></tr>
+<tr><td class="buttoner"><span class="trlab" id="_label_AuthAdrXut"></span></td><td><input type="text" class="long" value="0x00" id="xutTo"/></td></tr>
+<tr><td class="buttoner"><a class="button" data-action="AuthPayXut" id="_button_AuthPayXut"></a></td><td><input type="text" class="money" value="0" id="xut"/>&nbsp;XUT</td></tr>
 </table>
 <div class="result" id="_transfer_status"></div>
 <div class="result" id="_transfer_hash"></div>
@@ -171,8 +171,8 @@
 <div>
 <table class="cover">
 <tr><td class="buttoner"><span class="trlab" id="_label_AuthSumEth"></span></td><td><span id="bgether"><eth><span id="_ethers"></span></eth></span></td></tr>
-<tr><td class="buttoner"><a class="button" data-action="AuthPayEth" id="_button_AuthPayEth"></a></td><td><input type="text" class="long" value="0x00" id="to"/></td></tr>
-<tr><td class="buttoner"></td><td><input type="text" class="money" value="0" id="eth"/>&nbsp;ETH</td></tr>
+<tr><td class="buttoner"><span class="trlab" id="_label_AuthAdrEth"></span></td><td><input type="text" class="long" value="0x00" id="to"/></td></tr>
+<tr><td class="buttoner"><a class="button" data-action="AuthPayEth" id="_button_AuthPayEth"></a></td><td><input type="text" class="money" value="0" id="eth"/>&nbsp;ETH</td></tr>
 </table>
 <div class="result" id="_sendeth_status"></div>
 <div class="result" id="_sendeth_hash"></div>
