--- a/scr/test.html
+++ b/scr/test.html
@@ -7,7 +7,6 @@
   <link rel="stylesheet" type="text/css" href="https://asinerum.github.io/project/gui/style.css"/>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.7.6/angular.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/datetimepicker@0.1.39/dist/DateTimePicker.min.js"></script>
   <script src="https://cdn.jsdelivr.net/gh/ethereum/web3.js@1.0.0-beta.34/dist/web3.min.js"></script>
   <script src="https://cdn.jsdelivr.net/gh/ethereumjs/browser-builds/dist/ethereumjs-tx/ethereumjs-tx-1.3.3.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/synaptic@1.1.4/dist/synaptic.min.js"></script>
@@ -19,6 +18,7 @@
   <script src="https://asinerum.github.io/project/scr/xutmsg13.js"></script>
   <script src="https://asinerum.github.io/project/scr/xbutton.js"></script>
   <script src="https://asinerum.github.io/project/scr/xdomain.js"></script>
+  <script src="./datetimepicker.js"></script>
   </head>
   <body>
   <div class="body" id="body">
