--- a/index-user-pro.html
+++ b/index-user-pro.html
@@ -43,11 +43,29 @@
 <tr><td class="buttoner"><span class="trlab" id="_label_UserAaType">ADDRESS TYPE</span></td><td><input type="text" class="address" value="211" id="atype"/></td></tr>
 <tr><td class="buttoner"><span class="trlab" id="_label_UserAaHash">HASH</span></td><td><input disabled type="text" class="address" value="-" id="_ahash"/></td></tr>
 <tr><td class="buttoner"><span class="trlab" id="_label_UserAaUser">OWNER</span></td><td><input disabled type="text" class="address" value="-" id="_aowner"/></td></tr>
-<tr><td class="buttoner"><a class="button" data-action="UserAaAddr" id="_button_UserAaAddr">STORE ALIAS</a></td><td><span id="_address"></span></td></tr>
+<tr><td class="buttoner"><span class="trlab" id="_label_UserAaAddr">ASSIGNED ADDRESS</span></td><td><span id="_address"></span></td></tr>
+<tr><td class="buttoner"><a class="button" data-action="UserAaAddr" id="_button_UserAaAddr">STORE ALIAS</a></td><td><span class="textnotice" id="_note_UserAaAddr">EXCLUDING GAS FEE</span></td></tr>
 </table>
 <div class="result" id="mm_ping"></div>
 <div class="result" id="_alias_status"></div>
 <div class="result" id="_alias_hash"></div>
+</div>
+<hr class="cp"/>
+<br/>
+<a name="DOMAIN"></a>
+<div class="header" id="_header_domain">REGISTER A DOMAIN NAME</div>
+<hr class="cp"/>
+<div>
+<table class="cover">
+<tr><td class="buttoner"><a class="button" data-action="UserDomain" id="_button_UserDomain">DOMAIN NAME</a></td><td><input type="text" class="long" data-change="UserDomain" value="" id="domain"/></td></tr>
+<tr><td class="buttoner"><span class="trlab" id="_label_UserDrAddr">IP</span></td><td><input type="text" class="address" value="" id="dip"/></td></tr>
+<tr><td class="buttoner"><span class="trlab" id="_label_UserDrNote">NOTE</span></td><td><input type="text" class="address" value="" id="dnote"/></td></tr>
+<tr><td class="buttoner"><span class="trlab" id="_label_UserDrUser">OWNER</span></td><td><input disabled type="text" class="address" value="" id="_downer"/></td></tr>
+<tr><td class="buttoner"><span class="trlab" id="_label_UserDrExpt">EXPIRATION</span></td><td><input disabled type="text" class="address" value="" id="_dexp"/></td></tr>
+<tr><td class="buttoner"><a class="button" data-action="UserDomReg" id="_button_UserDomReg">REGISTER</a></td><td><input type="text" class="money" value="" id="regeth"/>&nbsp;ETH&nbsp;<span class="textnotice" id="_note_UserDomReg">EXCLUDING GAS FEE</span></td></tr>
+</table>
+<div class="result" id="_domain_status"></div>
+<div class="result" id="_domain_hash"></div>
 </div>
 <hr class="cp"/>
 <br/>
