Review index-user-pro.html

--- a/index-user-pro.html
+++ b/index-user-pro.html
@@ -44,7 +44,7 @@
 <tr><td class="buttoner"><span class="trlab" id="_label_UserAaHash">HASH</span></td><td><input disabled type="text" class="address" value="-" id="_ahash"/></td></tr>
 <tr><td class="buttoner"><span class="trlab" id="_label_UserAaUser">OWNER</span></td><td><input disabled type="text" class="address" value="-" id="_aowner"/></td></tr>
 <tr><td class="buttoner"><span class="trlab" id="_label_UserAaAddr">ASSIGNED ADDRESS</span></td><td><span id="_address"></span></td></tr>
-<tr><td class="buttoner"><a class="button" data-action="UserAaAddr" id="_button_UserAaAddr">STORE ALIAS</a></td><td><span class="textnotice" id="_note_UserAaAddr">EXCLUDING GAS FEE</span></td></tr>
+<tr><td class="buttoner"><a class="button" data-action="UserAaAddr" id="_button_UserAaAddr">ASSIGN</a></td><td><span class="textnotice" id="_note_UserAaAddr">EXCLUDING GAS FEE</span></td></tr>
 </table>
 <div class="result" id="mm_ping"></div>
 <div class="result" id="_alias_status"></div>
@@ -149,7 +149,7 @@
 <hr class="cp"/>
 <br/>
 <a name="REVIEW"></a>
-<div class="header" id="_header_review">REVIEW TRANSACTION</div>
+<div class="header" id="_header_review">REVIEW A TRANSACTION</div>
 <hr class="cp"/>
 <div>
 <table class="cover">
