--- a/game-lotto.html
+++ b/game-lotto.html
@@ -36,6 +36,7 @@
 <tr><td class="buttoner"><span class="trlab" id="_label_GameDocFrm">GAME FORMAT</span></td><td>
   <select class="long" id="docform">
   <option value="lo1x99">SODE 1x99</option>
+  <option value="tossup">TOSSUP 1x1</option>
   <option value="lo5x36">LOTTO 5x36</option>
   <option value="lo6x36">LOTTO 6x36</option>
   <option value="lo6x45">LOTTO 6x45</option>
