--- a/game-lotto.html
+++ b/game-lotto.html
@@ -35,12 +35,13 @@
   <input type="text" class="money" id="rewards0"/></td></tr>
 <tr><td class="buttoner"><span class="trlab" id="_label_GameDocFrm">GAME FORMAT</span></td><td>
   <select class="long" id="docform">
-  <option value="lo1x99">SODE 1x99</option>
-  <option value="tossup">TOSSUP 1x1</option>
   <option value="lo5x36">LOTTO 5x36</option>
   <option value="lo6x36">LOTTO 6x36</option>
   <option value="lo6x45">LOTTO 6x45</option>
   <option value="lo7x49">LOTTO 7x49</option>
+  <option value="tossup">TOSSUP 1x1</option>
+  <option value="de1x99">SODE XOSO</option>
+  <option value="lo1x99">SODE 1x99</option>
   </select></td></tr>
 <tr><td class="buttoner"><span class="trlab" id="_label_GameDocDat">GAME HEADER</span></td><td><input type="text" class="long" value="" id="docdat"/></td></tr>
 <tr><td class="buttoner"><a class="button" data-action="GameDocSet" id="_button_GameDocSet">PUBLISH</a></td><td><span class="textnotice" id="_note_GameDocSet">EXCLUDING GAS FEE</span></td></tr>
