--- a/index-author.html
+++ b/index-author.html
@@ -366,7 +366,7 @@
 <br/>
 <div class="footer" id="_header_copyright">(C)</div>
 </div>
-<script src="./show-author.js"></script>
+<script src="./startCaller.js"></script>
 <script src="./menu.js"></script>
 </body>
 </html>
