--- a/user.html
+++ b/user.html
@@ -37,7 +37,7 @@
 <br/>
 <div class="footer" id="_header_copyright">(C)2019 ASINERUM INTERNATIONAL PROJECT</div>
 </div>
-<script src="./showpro-author.js"></script>
+<script src="./startBroker.js"></script>
 <script src="./menu.js"></script>
 <script src="./user.js"></script>
 </body>
