--- a/game.html
+++ b/game.html
@@ -51,7 +51,7 @@
 <br/>
 <div class="footer" id="_header_copyright">(C)2019 ASINERUM INTERNATIONAL PROJECT</div>
 </div>
-<script src="./showpro-author.js"></script>
+<script src="./startBroker.js"></script>
 <script src="./menu.js"></script>
 <script src="./game.js"></script>
 </body>
