--- a/index-author-pro.html
+++ b/index-author-pro.html
@@ -275,7 +275,7 @@
 <br/>
 <div class="footer" id="_header_copyright">(C)2019 ASINERUM INTERNATIONAL PROJECT</div>
 </div>
-<script src="./showpro-author.js"></script>
+<script src="./startBroker.js"></script>
 <script src="./menu.js"></script>
 </body>
 </html>
