--- a/index-user-pro.html
+++ b/index-user-pro.html
@@ -97,7 +97,7 @@
 <tr><td class="buttoner"><span class="trlab" id="_label_AuthSumXut">XUT BALANCE</span></td><td><span id="bgxuteng"><xut><span id="_xuteng"></span></xut></span></td></tr>
 <tr><td class="buttoner"><span class="trlab" id="_label_AuthAdrXut">XUT RECEIVER</span></td><td><input type="text" class="address" data-change="UserRedXut" value="0x00" id="xutTo"/></td></tr>
 <tr><td class="buttoner"><span class="trlab" id="_label_UserTgtXut">RECEIVER WALLET</span></td><td><input disabled type="text" class="address" value="0x00" id="xutTarget"/></td></tr>
-<tr><td class="buttoner"><span class="trlab" id="_label_UserRefXut">NOTE TO RECEIVER</span></td><td><input type="text" class="long" value="0x00" id="xutNote"/></td></tr>
+<tr><td class="buttoner"><span class="trlab" id="_label_UserRefXut">NOTE TO RECEIVER</span></td><td><input type="text" class="long" value="" id="xutNote"/></td></tr>
 <tr><td class="buttoner"><a class="button" data-action="UserPayXut" id="_button_UserPayXut">SEND XUT</a></td><td><input type="text" class="money" value="0" id="xut"/>&nbsp;XUT</td></tr>
 </table>
 <div class="result" id="mm_transferFor"></div>
@@ -114,7 +114,7 @@
 <tr><td class="buttoner"><span class="trlab" id="_label_AuthSumEth">ETH BALANCE</span></td><td><span id="bgether"><eth><span id="_ethers"></span></eth></span></td></tr>
 <tr><td class="buttoner"><span class="trlab" id="_label_AuthAdrEth">ETH RECEIVER</span></td><td><input type="text" class="address" data-change="UserRedEth" value="0x00" id="to"/></td></tr>
 <tr><td class="buttoner"><span class="trlab" id="_label_UserTgtEth">RECEIVER WALLET</span></td><td><input disabled type="text" class="address" value="0x00" id="ethTarget"/></td></tr>
-<tr><td class="buttoner"><span class="trlab" id="_label_UserRefEth">NOTE TO RECEIVER</span></td><td><input type="text" class="long" value="0x00" id="ethNote"/></td></tr>
+<tr><td class="buttoner"><span class="trlab" id="_label_UserRefEth">NOTE TO RECEIVER</span></td><td><input type="text" class="long" value="" id="ethNote"/></td></tr>
 <tr><td class="buttoner"><a class="button" data-action="UserPayEth" id="_button_UserPayEth">SEND ETH</a></td><td><input type="text" class="money" value="0" id="eth"/>&nbsp;ETH</td></tr>
 </table>
 <div class="result" id="mm_sendeth"></div>
