--- a/user.html
+++ b/user.html
@@ -3,12 +3,21 @@
 <html lang="en">
 <head>
 <title>ASINERUM USER</title>
-<link href="./favicon.ico" rel="icon" type="image/x-icon"/>
-<script src="./xuteng.user.js"></script>
+<link href="https://cdn.jsdelivr.net/gh/asinerum/project/favicon.ico" rel="icon" type="image/x-icon"/>
+<link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" type="text/css"/>
+<link href="https://cdn.jsdelivr.net/npm/trumbowyg@2.21.0/dist/ui/trumbowyg.min.css" rel="stylesheet" type="text/css"/>
+<link href="https://cdn.jsdelivr.net/gh/asinerum/project/gui/fonts.css" rel="stylesheet" type="text/css"/>
+<link href="https://cdn.jsdelivr.net/gh/asinerum/project/gui/style.css" rel="stylesheet" type="text/css"/>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.7.6/angular.min.js"></script>
+<script src="https://cdn.jsdelivr.net/gh/ethereum/web3.js@1.0.0-beta.34/dist/web3.min.js"></script>
+<script src="https://cdn.jsdelivr.net/gh/ethereumjs/browser-builds/dist/ethereumjs-tx/ethereumjs-tx-1.3.3.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/trumbowyg@2.21.0/dist/trumbowyg.min.js"></script>
+<script src="https://cdn.jsdelivr.net/gh/asinerum/project/scr/xuteng13a.js"></script>
 </head>
 <body class="private">
 <div class="body" id="body">
-<img class="banner" src="./gui/logo_asinerum.jpg" id="_img_banner"/>
+<img class="banner" src="https://cdn.jsdelivr.net/gh/asinerum/project/gui/asinerum.jpg" id="_img_banner"/>
 <br/>
 <br/>
 <a name="AUTHOR"></a>
@@ -37,8 +46,8 @@
 <br/>
 <div class="footer" id="_header_copyright">(C)2019 ASINERUM INTERNATIONAL PROJECT</div>
 </div>
-<script src="./startBroker.js"></script>
-<script src="./menu.js"></script>
-<script src="./user.js"></script>
+<script src="https://cdn.jsdelivr.net/gh/asinerum/project/startBroker.js"></script>
+<script src="https://cdn.jsdelivr.net/gh/asinerum/project/menu13a.js"></script>
+<script src="https://cdn.jsdelivr.net/gh/asinerum/project/user.js"></script>
 </body>
 </html>
