--- a/epay.html
+++ b/epay.html
@@ -13,7 +13,7 @@
 <script src="https://cdn.jsdelivr.net/gh/ethereum/web3.js@1.0.0-beta.34/dist/web3.min.js"></script>
 <script src="https://cdn.jsdelivr.net/gh/ethereumjs/browser-builds/dist/ethereumjs-tx/ethereumjs-tx-1.3.3.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/trumbowyg@2.21.0/dist/trumbowyg.min.js"></script>
-<script src="https://cdn.jsdelivr.net/gh/asinerum/project/scr/xuteng14a2.js"></script>
+<script src="https://cdn.jsdelivr.net/gh/asinerum/project/scr/xuteng14a3.js"></script>
 </head>
 <body class="private">
 <div class="body" id="body">
@@ -26,11 +26,14 @@
 <div>
 <table class="cover">
 <tr><td class="buttoner"><a class="button" data-action="UserTxView" id="_button_GameTxView">GAME ADDRESS</a></td><td><input type="text" class="long" value="0x00" id="txhash"/></td></tr>
+<tr><td class="buttoner"><a class="button" data-action="GameResult" id="_label_GameResult">GAME RESULT</span></td><td><span class="textwarn" id="_gameresult">-</span></td></tr>
 <tr><td class="buttoner"><span class="label" id="_label_GameTxNote">SYSTEM WARNING</span></td><td><span class="textnotice" id="_note_GameTxNote">WARNING</span></td></tr>
 <tr><td class="buttoner"><span class="trlab" id="_label_GameTxData">GAME DATA</span></td><td><span id="_txdata"></span></td></tr>
 <tr><td class="buttoner"><span class="trlab" id="_label_GameTxInfo">SPECIAL INFO</span></td><td><span id="_gameinfo">-</span></td></tr>
+<tr><td class="buttoner"><span class="trlab" id="_label_GameTxOArr">BET OPTIONS</span></td><td><input type="text" class="long" value="" id="gamebets"/></td></tr>
 <tr><td class="buttoner"><span class="trlab" id="_label_GameTxOpts">BET OPTION</span></td><td>
   <select class="long" id="gamebet">
+  <option value="-">-select-</option>
   <option value="2">2: home/win</option>
   <option value="1">1: draw/tie/over/odd</option>
   <option value="0">0: away/lose/under/even</option>
