--- a/scr/test.html
+++ b/scr/test.html
@@ -10,13 +10,14 @@
   <script src="https://cdn.jsdelivr.net/gh/ethereum/web3.js@1.0.0-beta.34/dist/web3.min.js"></script>
   <script src="https://cdn.jsdelivr.net/gh/ethereumjs/browser-builds/dist/ethereumjs-tx/ethereumjs-tx-1.3.3.min.js"></script>
   <script src="https://cdn.jsdelivr.net/gh/asinerum/project/scr/_bip.js"></script>
+  <script src="https://cdn.jsdelivr.net/gh/asinerum/project/scr/_qrcode.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/synaptic@1.1.4/dist/synaptic.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/mathjs@6.6.4/dist/math.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs@1.3.1/dist/tf.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/@teachablemachine/image@0.8/dist/teachablemachine-image.min.js"></script>
   <script src="https://unpkg.com/keras-js"></script>
-  <script src="https://asinerum.github.io/project/scr/xuteng20.js"></script>
-  <script src="https://asinerum.github.io/project/scr/xutmsg20.js"></script>
+  <script src="https://asinerum.github.io/project/scr/xuteng21.js"></script>
+  <script src="https://asinerum.github.io/project/scr/xutmsg21.js"></script>
   <script src="https://asinerum.github.io/project/scr/xbutton.js"></script>
   <script src="https://asinerum.github.io/project/scr/xdomain.js"></script>
   </head>
