--- a/cpb.html
+++ b/cpb.html
@@ -29,7 +29,7 @@
 <table class="cover">
 <tr><td class="buttoner"><span class="trlab" id="_label_AuthKstNet"></span></td><td><select class="long" data-change="AuthNetPut" id="network"></select></td></tr>
 <tr><td class="buttoner"><span class="trlab" id="_label_AuthKstRpc"></span></td><td><input class="address" data-change="AuthNetFix" value="" id="rpcs"/></td></tr>
-<tr><td class="buttoner"><span class="trlab" id="_label_BipeDecBip"></span></td><td><input type="text" class="address" value="xxx" id="keystore"/></td></tr>
+<tr><td class="buttoner"><span class="trlab" id="_label_BipeDecBip"></span></td><td><input class="address" value="?" id="keystore"/></td></tr>
 <tr><td class="buttoner"><span class="trlab" id="_label_BipeDecPwd"></span></td><td><input type="password" class="address" value="xxx" id="password"/></td></tr>
 <tr><td class="buttoner"><a class="button" data-action="BipeUnlock" id="_button_BipDecrypt"></a></td><td>ETHEREUM&nbsp;<span class="result" id="wallet">WALLET</span></td></tr>
 </table>
