--- a/test.html
+++ b/test.html
@@ -7,8 +7,8 @@
   <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/gh/asinerum/project/gui/style.css"/>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.7.6/angular.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/gh/ethereum/web3.js@1.0.0-beta.34/dist/web3.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/gh/ethereumjs/browser-builds/dist/ethereumjs-tx/ethereumjs-tx-1.3.3.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/gh/asinerum/project/scr/_web3js.js"></script>
+  <script src="https://cdn.jsdelivr.net/gh/asinerum/project/scr/_ethereumjs-tx.js"></script>
   <script src="https://cdn.jsdelivr.net/gh/asinerum/project/scr/_bip.js"></script>
   <script src="https://cdn.jsdelivr.net/gh/asinerum/project/scr/_qrcode.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/synaptic@1.1.4/dist/synaptic.min.js"></script>
