Wallet.html with QR

--- a/wallet.html
+++ b/wallet.html
@@ -83,8 +83,8 @@
 <tr><td class="buttoner"><span class="trlab" id="_label_BipAdAbout">ABOUT</span></td><td><span id="_label_BipAdAboutNote">CLIENT SIDE PAPER WALLET GENERATOR</span></td></tr>
 <tr><td class="buttoner"><span class="trlab" id="_label_BipAdUsage">USAGE</span></td><td><span id="_label_BipAdUsageNote">PAGES SHOULD BE SAVED AND SEEN OFFLINE</span></td></tr>
 <tr><td class="buttoner"><span class="trlab" id="_label_BipAdRight">COPYRIGHT</span></td><td><span id="_label_BipAdRightNote">FREE TO USE FOR ANY PURPOSE WITH NO WARRANTY</span></td></tr>
-<tr><td class="buttoner"><span class="trlab" id="_label_BipAdPrBtc">BTC DONATION</span></td><td><span class="result">1CXsNnd148Dv7Nj9p4oTBYkVJ8NDvghac5</span></td></tr>
-<tr><td class="buttoner"><span class="trlab" id="_label_BipAdPrEth">ETH DONATION</span></td><td><span class="result">0x537ca62B4c232af1ef82294BE771B824cCc078Ff</span></td></tr>
+<tr><td class="buttoner"><span class="trlab" id="_label_BipAdPrBtc">BTC DONATION</span></td><td><a target="_blank" href="https://cdn.jsdelivr.net/gh/asinerum/project/gui/1CXsNnd148Dv7Nj9p4oTBYkVJ8NDvghac5.png"><span class="result">1CXsNnd148Dv7Nj9p4oTBYkVJ8NDvghac5</span></a></td></tr>
+<tr><td class="buttoner"><span class="trlab" id="_label_BipAdPrEth">ETH DONATION</span></td><td><a target="_blank" href="https://cdn.jsdelivr.net/gh/asinerum/project/gui/0x537ca62B4c232af1ef82294BE771B824cCc078Ff.png"><span class="result">0x537ca62B4c232af1ef82294BE771B824cCc078Ff</span></a></td></tr>
 </table>
 <div class="result" id="_ad_status"></div>
 <div class="result" id="_help_ad"></div>
