--- a/csb.html
+++ b/csb.html
@@ -31,7 +31,7 @@
 <tr><td class="buttoner"><span class="trlab" id="_label_AuthKstRpc"></span></td><td><input disabled class="address" data-change="AuthNetFix" value="https://www.ethercluster.com/etc" id="rpcs"/></td></tr>
 <tr><td class="buttoner"><span class="trlab" id="_label_BipeDecBip"></span></td><td><input class="address" value="?" id="keystore"/></td></tr>
 <tr><td class="buttoner"><span class="trlab" id="_label_BipeDecPwd"></span></td><td><input type="password" class="address" value="xxx" id="password"/></td></tr>
-<tr><td class="buttoner"><a class="button" data-action="BipeUnlock" id="_button_BipDecrypt"></a></td><td>BSC&nbsp;BINANCE&nbsp;COIN&nbsp;<span class="result" id="wallet">WALLET</span></td></tr>
+<tr><td class="buttoner"><a class="button" data-action="BipeUnlock" id="_button_BipDecrypt"></a></td><td>ETHEREUM&nbsp;CLASSIC&nbsp;<span class="result" id="wallet">WALLET</span></td></tr>
 </table>
 <div class="result" id="_keystore_status"></div>
 <div class="result" id="_help_keystore"></div>
