--- a/csb.html
+++ b/csb.html
@@ -14,6 +14,9 @@
 <script src="https://cdn.jsdelivr.net/gh/asinerum/project/scr/_web3js.js"></script>
 <script src="https://cdn.jsdelivr.net/gh/asinerum/project/scr/_ethereumjs-tx.js"></script>
 <script src="https://cdn.jsdelivr.net/gh/asinerum/project/scr/_bip.js"></script>
+<script src="https://cdn.jsdelivr.net/gh/asinerum/project/scr/_cash.js"></script>
+<script src="https://cdn.jsdelivr.net/gh/asinerum/project/scr/_dash.js"></script>
+<script src="https://cdn.jsdelivr.net/gh/asinerum/project/scr/_lite.js"></script>
 <script src="https://cdn.jsdelivr.net/gh/asinerum/project/scr/_qrcode.js"></script>
 <script src="https://cdn.jsdelivr.net/gh/asinerum/project/scr/xuteng.js"></script>
 </head>
