--- a/wallet.html
+++ b/wallet.html
@@ -2,7 +2,7 @@
 <meta charset="utf-8">
 <html lang="en">
 <head>
-<title>ASINERUM PERMANENT ACCOUNT</title>
+<title>ASINERUM PAPER WALLET GENERATOR</title>
 <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" type="text/css"/>
 <link href="https://cdn.jsdelivr.net/npm/trumbowyg@2.21.0/dist/ui/trumbowyg.min.css" rel="stylesheet" type="text/css"/>
 <link href="https://cdn.jsdelivr.net/gh/asinerum/project/gui/fonts.css" rel="stylesheet" type="text/css"/>
@@ -35,9 +35,9 @@
 <tr><td class="buttoner"><span class="trlab" id="_label_BipeAccEth">ETHEREUM WALLET</span></td><td><input type="text" class="address" value="" id="new_eth"/></td></tr>
 <tr><td class="buttoner"><span class="trlab" id="_label_BipeAccKey">BTC PRIVATE KEY</span></td><td><input type="text" class="copy" value="" id="new_key"/></td></tr>
 <tr><td class="buttoner"><span class="trlab" id="_label_BipeAccHex">ETH PRIVATE KEY</span></td><td><input type="text" class="copy" value="" id="new_hex"/></td></tr>
-<tr><td class="buttoner"><span class="label" id="_label_BipCaution">CAUTION</span></td><td><span class="textnotice" id="_label_BipCautionNote">PRIVATE KEYS MUST BE KEPT SAFE AND SECRET</span></td></tr>
+<tr><td class="buttoner"><span class="label" id="_label_BipCaution">CAUTION</span></td><td><span class="textnotice" id="_note_BipCaution">PRIVATE KEYS MUST BE KEPT SAFE AND SECRET</span></td></tr>
 </table>
-<div class="result" id="_account_status"><span id="_label_BipAccountNote">BE SURE THAT NOBODY CAN SEE YOUR SCREEN THEN CLICK "CREATE"</span></div>
+<div class="result" id="_account_status"><span id="_note_BipAccount">BE SURE THAT NOBODY CAN SEE YOUR SCREEN THEN CLICK "CREATE"</span></div>
 <div class="result" id="_help_account"></div>
 </div>
 <hr class="cp"/>
@@ -53,9 +53,9 @@
 <tr><td class="buttoner"><span class="trlab" id="_label_BipeOldBtc">BITCOIN WALLET</span></td><td><input type="text" class="address" value="" id="old_btc"/></td></tr>
 <tr><td class="buttoner"><span class="trlab" id="_label_BipeOldEth">ETHEREUM WALLET</span></td><td><input type="text" class="address" value="" id="old_eth"/></td></tr>
 <tr><td class="buttoner"><span class="trlab" id="_label_BipeEncBip">BIP38 ENCRYPTED KEY</span></td><td><input type="text" class="address" value="" id="enc_bip"/></td></tr>
-<tr><td class="buttoner"><span class="label" id="_label_BipWarning">WARNING</span></td><td><span class="textnotice" id="_label_BipWarningNote">PASSCODE CAN BE NEITHER RESTORED NOR RESET</span></td></tr>
+<tr><td class="buttoner"><span class="label" id="_label_BipWarning">WARNING</span></td><td><span class="textnotice" id="_note_BipWarning">PASSCODE CAN BE NEITHER RESTORED NOR RESET</span></td></tr>
 </table>
-<div class="result" id="_encrypt_status"><span id="_label_BipEncryptNote">TIPS: ENCRYPTED KEY SHOULD BE PRINTED TO PAPER</span></div>
+<div class="result" id="_encrypt_status"><span id="_note_BipEncrypt">TIPS: ENCRYPTED KEY SHOULD BE PRINTED TO PAPER</span></div>
 <div class="result" id="_help_encrypt"></div>
 </div>
 <hr class="cp"/>
@@ -83,9 +83,9 @@
 <hr class="cp"/>
 <div>
 <table class="cover">
-<tr><td class="buttoner"><span class="trlab" id="_label_BipAdAbout">ABOUT</span></td><td><span id="_label_BipAdAboutNote">CLIENT SIDE PAPER WALLET GENERATOR</span></td></tr>
-<tr><td class="buttoner"><span class="trlab" id="_label_BipAdUsage">USAGE</span></td><td><span id="_label_BipAdUsageNote">PAGES SHOULD BE SAVED AND SEEN OFFLINE</span></td></tr>
-<tr><td class="buttoner"><span class="trlab" id="_label_BipAdRight">COPYRIGHT</span></td><td><span id="_label_BipAdRightNote">FREE TO USE FOR ANY PURPOSE WITH NO WARRANTY</span></td></tr>
+<tr><td class="buttoner"><span class="trlab" id="_label_BipAdAbout">ABOUT</span></td><td><span id="_note_BipAdAbout">CLIENT SIDE PAPER WALLET GENERATOR</span></td></tr>
+<tr><td class="buttoner"><span class="trlab" id="_label_BipAdUsage">USAGE</span></td><td><span id="_note_BipAdUsage">PAGES SHOULD BE SAVED AND SEEN OFFLINE</span></td></tr>
+<tr><td class="buttoner"><span class="trlab" id="_label_BipAdRight">COPYRIGHT</span></td><td><span id="_note_BipAdRight">FREE TO USE FOR ANY PURPOSE WITH NO WARRANTY</span></td></tr>
 <tr><td class="buttoner"><span class="trlab" id="_label_BipAdPrBtc">BTC DONATION</span></td><td><a target="_blank" href="https://cdn.jsdelivr.net/gh/asinerum/project/gui/1CXsNnd148Dv7Nj9p4oTBYkVJ8NDvghac5.png"><span class="result">1CXsNnd148Dv7Nj9p4oTBYkVJ8NDvghac5</span></a></td></tr>
 <tr><td class="buttoner"><span class="trlab" id="_label_BipAdPrEth">ETH DONATION</span></td><td><a target="_blank" href="https://cdn.jsdelivr.net/gh/asinerum/project/gui/0x537ca62B4c232af1ef82294BE771B824cCc078Ff.png"><span class="result">0x537ca62B4c232af1ef82294BE771B824cCc078Ff</span></a></td></tr>
 </table>
